--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,13 +6,7 @@
   padding: 2rem;
 
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+  font-size: 90px;
 }
 
 @media (hover: hover) {
